[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://sprites/inimigo03.png" type="Texture" id=2]
[ext_resource path="res://sprites/inimigo1.png" type="Texture" id=3]
[ext_resource path="res://sprites/inimigo02.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "voando",
"speed": 2.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 34.5275

[sub_resource type="CircleShape2D" id=3]
radius = 24.6167

[node name="Enemy" type="Area2D"]
position = Vector2( 1136.68, 324.645 )
collision_layer = 0
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -65.8389, 26.9348 )
scale = Vector2( 0.534085, 0.445403 )
frames = SubResource( 1 )
animation = "voando"
frame = 1
playing = true

[node name="shapet" type="CollisionShape2D" parent="."]
position = Vector2( -82.5415, 26.7109 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.01
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -65.2473, 25.0057 )
scale = Vector2( 6.91135, 4.33924 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -7.66465, -3.42725 )
enabled = true
cast_to = Vector2( -150, 70 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="shape" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -83.2908, 25.8471 )
shape = SubResource( 3 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
